@@ -8,7 +8,6 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import org.mockito.InjectMocks;
 import org.mockito.MockitoAnnotations;
 import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
@@ -32,7 +31,6 @@ import java.util.Objects;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -60,31 +58,38 @@ class GlobalExceptionHandlerTest {
 
     @Test
     void testHandleResponseStatusException() {
-        HttpStatus expectedStatus = HttpStatus.BAD_REQUEST;
+
+        // Arrange
         String expectedErrorMessage = "Validation failed";
+        HttpStatus expectedStatus = HttpStatus.BAD_REQUEST;
         ResponseStatusException ex = new ResponseStatusException(expectedStatus, expectedErrorMessage);
 
-        StepVerifier.create(globalExceptionHandler.handleResponseStatusException(ex))
-                .consumeNextWith(responseEntity -> {
+        GlobalExceptionHandler handler = new GlobalExceptionHandler();
+
+        // Act
+        ResponseEntity<MessageDto> responseEntity = handler.handleResponseStatusException(ex);
+
+        // Assert
                     assertEquals(expectedStatus, responseEntity.getStatusCode());
                     assertEquals(expectedErrorMessage, responseEntity.getBody().getMessage());
-                })
-                .verifyComplete();
     }
 
     @Test
     void testHandleResponseStatusException_NullDetailMessageArguments() {
+        // Arrange
         HttpStatus expectedStatus = HttpStatus.BAD_REQUEST;
         ResponseStatusException ex = mock(ResponseStatusException.class);
         when(ex.getStatusCode()).thenReturn(expectedStatus);
         when(ex.getDetailMessageArguments()).thenReturn(null);
 
-        StepVerifier.create(globalExceptionHandler.handleResponseStatusException(ex))
-                .consumeNextWith(responseEntity -> {
+        GlobalExceptionHandler handler = new GlobalExceptionHandler();
+
+        // Act
+        ResponseEntity<MessageDto> responseEntity = handler.handleResponseStatusException(ex);
+
+        // Assert
                     assertEquals(expectedStatus, responseEntity.getStatusCode());
-                    assertEquals("Validation failed", responseEntity.getBody().getMessage());
-                })
-                .verifyComplete();
+        assertEquals("Validation failed", Objects.requireNonNull(responseEntity.getBody()).getMessage());
     }
 
     @Test
@@ -94,16 +99,12 @@ class GlobalExceptionHandlerTest {
         BindingResult bindingResult = mock(BindingResult.class);
         when(bindingResult.getFieldErrors()).thenReturn(List.of(new FieldError("object", "field", "message")));
         when(methodArgumentNotValidException.getBindingResult()).thenReturn(bindingResult);
-        when(methodArgumentNotValidException.getMessage()).thenReturn("Validation failed");
 
-        // Act & Assert
-        StepVerifier.create(globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException))
-                .assertNext(responseEntity -> {
-                    assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
-                    assertNotNull(responseEntity.getBody());
-                    assertTrue(responseEntity.getBody().getMessage().contains("message"));
-                })
-                .verifyComplete();
+        // Act
+        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException);
+
+        // Assert
+        MatcherAssert.assertThat(responseEntity, notNullValue());
     }
 
     @Test
@@ -111,73 +112,85 @@ class GlobalExceptionHandlerTest {
 
         // Arrange
         BindingResult bindingResult = mock(BindingResult.class);
-        when(bindingResult.getFieldErrors()).thenReturn(Collections.emptyList()); // No field errors
+        FieldError fieldError = mock(FieldError.class);
+        when(fieldError.getField()).thenReturn("name");
+        when(fieldError.getDefaultMessage()).thenReturn("default message");
+        when(fieldError.getCodes()).thenReturn(new String[]{"message"});
+        when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError));
         when(methodArgumentNotValidException.getBindingResult()).thenReturn(bindingResult);
-        when(methodArgumentNotValidException.getMessage()).thenReturn("Validation failed due to input errors");
 
-        // Act & Assert
-        StepVerifier.create(globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException))
-                .assertNext(responseEntity -> {
-                    assertEquals(HttpStatus.BAD_REQUEST, responseEntity.getStatusCode());
-                    assertNotNull(responseEntity.getBody());
-                    assertEquals("Validation failed due to input errors", responseEntity.getBody().getMessage());
-                })
-                .verifyComplete();
+        // Act
+        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleMethodArgumentNotValidException(methodArgumentNotValidException);
+
+        // Assert
+        MatcherAssert.assertThat(responseEntity, notNullValue());
     }
 
     @Test
     void handleConstraintViolation() {
+        // Arrange
         Set<ConstraintViolation<?>> constraints = new HashSet<>();
-        ConstraintViolation<?> constraint = mock(ConstraintViolation.class);
-        when(constraint.getMessage()).thenReturn("Expected message");
-        constraints.add(constraint);
+
+        ConstraintViolation<?> constraint1 = mock(ConstraintViolation.class);
+        when(constraint1.getMessage()).thenReturn("Expected message");
+        constraints.add(constraint1);
+
+        ConstraintViolation<?> constraint2 = mock(ConstraintViolation.class);
+        when(constraint2.getMessage()).thenReturn("Expected message");
+        constraints.add(constraint2);
 
         ConstraintViolationException exception = new ConstraintViolationException("Validation failed.", constraints);
 
-        StepVerifier.create(globalExceptionHandler.handleConstraintViolation(exception))
-                .consumeNextWith(responseEntity -> {
+        // Act
+        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleConstraintViolation(exception);
+
+        // Assert
                     assertEquals(OK_REQUEST, responseEntity.getStatusCode());
-                    assertTrue(Objects.requireNonNull(responseEntity.getBody()).getMessage().contains("Expected message"));
-                })
-                .verifyComplete();
+        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
+        Assertions.assertTrue(responseBody.contains("Expected message"));
     }
 
 
     @Test
     void testHandleChallengeNotFoundException() {
-        // El mensaje específico aquí es irrelevante para el comportamiento del manejador de excepciones en esta prueba.
-        ChallengeNotFoundException exception = new ChallengeNotFoundException("Este mensaje es ignorado en el manejador.");
+        // Arrange
+        ChallengeNotFoundException challengeNotFoundException = new ChallengeNotFoundException("Challenge not found");
 
-        StepVerifier.create(globalExceptionHandler.handleChallengeNotFoundException(exception))
-                .consumeNextWith(responseEntity -> {
-                    assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-                    assertTrue(responseEntity.getBody().getMessage().contains("Challenge Id not found"));
-                })
-                .verifyComplete();
+        // Act
+        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleChallengeNotFoundException(challengeNotFoundException);
+
+        // Assert
+        assertEquals(BAD_REQUEST, responseEntity.getStatusCode());
+        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
+        Assertions.assertTrue(responseBody.contains("Challenge not found"));
     }
 
     @Test
     void testHandleResourceNotFoundException() {
-        ResourceNotFoundException exception = new ResourceNotFoundException("Resource not found");
+        // Arrange
+        ResourceNotFoundException resourceNotFoundException = new ResourceNotFoundException("Resource not found");
 
-        StepVerifier.create(globalExceptionHandler.handleResourceNotFoundException(exception))
-                .consumeNextWith(responseEntity -> {
+        // Act
+        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleResourceNotFoundException(resourceNotFoundException);
+
+        // Assert
                     assertEquals(OK_REQUEST, responseEntity.getStatusCode());
-                    assertTrue(responseEntity.getBody().getMessage().contains("Resource not found"));
-                })
-                .verifyComplete();
+        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
+        Assertions.assertTrue(responseBody.contains("Resource not found"));
     }
 
     @Test
     void test_HandleBadUUIDException() {
-        BadUUIDException exception = new BadUUIDException("Invalid Id format");
+        // Arrange
+        BadUUIDException badUUIDException = new BadUUIDException("Invalid Id format");
 
-        StepVerifier.create(globalExceptionHandler.handleBadUUIDException(exception))
-                .consumeNextWith(responseEntity -> {
+        // Act
+        ResponseEntity<MessageDto> responseEntity = globalExceptionHandler.handleBadUUIDException(badUUIDException);
+
+        // Assert
                     assertEquals(BAD_REQUEST, responseEntity.getStatusCode());
-                    assertTrue(responseEntity.getBody().getMessage().contains("Invalid Id format"));
-                })
-                .verifyComplete();
+        String responseBody = Objects.requireNonNull(responseEntity.getBody()).getMessage();
+        Assertions.assertTrue(responseBody.contains("Invalid Id format"));
     }
 
 }
